--- a/package.json
+++ b/package.json
@@ -48,10 +48,9 @@
     "compression": "^1.7.3",
     "cookie-session": "^1.2.0",
     "cors": "^2.8.5",
-    "datatype-expansion": "^0.3.6",
     "debug": "^4.0.0",
     "finalhandler": "^1.1.1",
-    "form-data": "^2.5.0",
+    "form-data": "^3.0.0",
     "http-errors": "^1.7.1",
     "invariant": "^2.2.2",
     "oauth2orize": "^1.0.1",
@@ -63,12 +62,11 @@
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-oauth2-client-password": "^0.1.2",
-    "raml-1-parser": "^1.1.52",
     "request-error-handler": "^1.1.1",
     "type-is": "^1.5.5",
     "webapi-parser": "^0.3.2",
     "xtend": "^4.0.0",
-    "yargs": "^14.2.0"
+    "yargs": "^15.0.2"
   },
   "devDependencies": {
     "busboy": "^0.3.1",
@@ -76,13 +74,13 @@
     "client-oauth2": "^4.2.0",
     "es6-promise": "^4.2.4",
     "express": "^4.13.3",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.2",
     "nyc": "^14.1.0",
-    "popsicle": "12.0.4",
-    "popsicle-server": "^2.0.0",
+    "popsicle": "^12.0.5",
+    "popsicle-server": "^3.0.0",
     "pre-commit": "^1.0.5",
     "rewire": "^4.0.0",
-    "server-address": "^2.0.0",
+    "server-address": "^3.0.1",
     "standard": "^14.3.1"
   }
 }
